# dentalos

./: .env.production  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  SETUP.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  gunicorn.conf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic_public/: env.py
backend/alembic_public/versions/: 001_initial_public.py  002_add_catalogs.py  003_admin_tables.py  004_add_tenant_addons.py  005_add_consent_templates.py  006_admin_audit_and_history.py  007_admin_announcements.py  008_admin_revenue_snapshots.py  009_admin_wave6_tables.py  010_admin_wave7_default_prices.py  011_ai_plan_features.py
backend/alembic_tenant/: alembic.ini  env.py
backend/alembic_tenant/versions/: 001_baseline.py  001_initial_tenant.py  002_audit_log.py  002_messaging_referrals.py  003_add_commission_percentage.py  003_add_patients.py  004_add_odontogram.py  004_compliance_tables.py  005_add_clinical_records.py  005_inventory_tables.py  006_add_evolution_templates.py  006_perf_indexes.py  007_add_service_catalog.py  007_notification_tables.py  008_add_patient_documents.py  008_voice_check_constraints.py  009_add_billing.py  009_add_must_change_password.py  010_sprint21_engagement_tables.py  011_sprint23_growth_tables.py  012_sprint25_reputation_intelligence.py  013_sprint27_ai_marketing.py  014_sprint29_financing_chatbot_surveys_video.py  015_sprint31_voip_claims_labs.py  016_sprint33_ortho_tables.py  017_gap12_facial_aesthetics.py  018_postop_instructions.py  019_clinic_settings.py  020_voice_idempotency_key.py  021_voice_parse_tokens.py  022_ai_usage_logs.py  023_inv_item_tp_link.py  023_invoice_item_treatment_link.py  024_quot_item_tp_link.py  024_quotation_item_treatment_link.py  025_invoice_item_ortho_link.py  026_invoice_tax_fields.py  027_radiograph_analyses.py  028_voice_clinical_notes.py
backend/app/: main.py
backend/app/auth/: context.py  dependencies.py  permissions.py  portal_context.py  portal_dependencies.py
backend/app/cli/: __init__.py  migrate_all_tenants.py  seed_catalogs.py  seed_consent_templates.py  seed_evolution_templates.py  seed_service_catalog.py
backend/app/compliance/: __init__.py  base.py  deps.py  registry.py
backend/app/core/: audit.py  cache.py  config.py  database.py  email.py  error_codes.py  exception_handlers.py  exceptions.py  logging_config.py  metrics.py  middleware.py  odontogram_constants.py  pdf.py  queue.py  rate_limit.py  redis.py  sanitize.py  security.py  sentry.py  signature_utils.py  storage.py  tenant.py  virus_scan.py
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py  audit.py  base.py
backend/app/schemas/: admin.py  ai_report.py  ai_treatment.py  analytics.py  appointment.py  auth.py  call_log.py  cash_register.py  catalog.py  chatbot.py  clinical_record.py  clinical_summary.py  compliance.py  consent.py  convenio.py  diagnosis.py  digital_signature.py  email_campaign.py  eps_claim.py  eps_verification.py  evolution_template.py  exchange_rate.py  expense.py  facial_aesthetics.py  family.py  financing.py  huddle.py  intake.py  inventory.py  invoice.py  lab_order.py  loyalty.py  medical_history.py  membership.py  messaging.py  notifications.py  nps_survey.py  odontogram.py  odontogram_settings.py  ortho.py  (+37 more)
backend/app/services/: admin_auth_service.py  admin_service.py  ai_claude_client.py  ai_report_service.py  ai_treatment_service.py  analytics_service.py  appointment_service.py  audit_service.py  auth_service.py  call_log_service.py  cash_register_service.py  catalog_service.py  chatbot_engine.py  chatbot_service.py  clinical_record_service.py  clinical_summary_service.py  compliance_config_service.py  consent_service.py  convenio_service.py  diagnosis_service.py  digital_signature_service.py  einvoice_service.py  email_campaign_service.py  email_tracking_service.py  eps_claim_service.py  eps_verification_service.py  evolution_template_service.py  exchange_rate_service.py  expense_service.py  facial_aesthetics_service.py  family_service.py  financing_service.py  huddle_service.py  intake_service.py  intake_template_service.py  inventory_service.py  invoice_service.py  lab_order_service.py  loyalty_service.py  medical_history_service.py  (+51 more)
backend/app/workers/: __init__.py  base.py  clinical_worker.py  compliance_worker.py  import_worker.py  main.py  maintenance_worker.py  notification_worker.py  voice_worker.py
backend/load_tests/: __init__.py  config.py  locustfile.py  seed_load.py
backend/load_tests/scenarios/: __init__.py  _base.py  appointment_scenario.py  auth_scenario.py  billing_scenario.py  health_scenario.py  odontogram_scenario.py  patient_scenario.py
backend/load_tests/utils/: __init__.py  data_pool.py  token_pool.py
backend/scripts/: alert_telegram.py  generate_keys.py  seed_demo_data.py  seed_dev.py
backend/templates/: appointment_cancellation_es.html  appointment_confirmation_es.html  appointment_reminder_24h_es.html  appointment_reminder_2h_es.html  consent_es.html  consent_signature_request_es.html  daily_clinic_summary_es.html  email_verification_es.html  invoice_sent_es.html  new_message_es.html  password_reset_es.html  payment_receipt_es.html  payment_reminder_es.html  plan_upgrade_prompt_es.html  portal_welcome_es.html  prescription_es.html  team_invite_es.html  treatment_plan_es.html  treatment_plan_shared_es.html  waitlist_slot_available_es.html  welcome_es.html
backend/tests/: conftest.py
backend/tests/factories/: patient_factory.py  tenant_factory.py  user_factory.py
backend/tests/integration/: test_ai_report_api.py  test_ai_treatment_api.py  test_calls_api.py  test_cash_register_api.py  test_chatbot_api.py  test_convenios_api.py  test_daviplata_webhook.py  test_eps_claims_api.py  test_eps_verification_api.py  test_exchange_rates_api.py  test_expenses_api.py  test_families_api.py  test_financing_api.py  test_invoice_discount_stack_api.py  test_lab_orders_api.py  test_loyalty_api.py  test_marketing_api.py  (+13 more)
(+1278 files in other folders)
